--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,70 @@
+@import url('https://fonts.googleapis.com/css?family=Abel|Anton');
 /* Main style sheet for index.html */
+
+
+p {
+    font-family: 'Abel', sans-serif;
+}
+
+h1, h2, h3, h4, h5{
+    font-family: 'Anton', sans-serif;
+
+}
+h1 {
+    font-size: 64px;
+}
+h2 {
+    font-size: 48px;
+}
+h3 {
+    font-size: 40px;
+}
+
+h4 {
+    font-size: 32px;
+}
+
+h5 {
+    font-size: 28px;
+}
+
+.red {
+    background-color: #E6563B;
+}
+
+.orange {
+    background-color: #EB9D3A;
+}
+
+.green {
+    background-color: #7CB06C;
+}
+
+.teal {
+    background-color: #00ABA9;
+}
+
+.white {
+    color: #F0F0F0;
+}
+
+.bg-white {
+    background-color: #f0f0f0;
+}
+
+
+.grey {
+    color: #E6E6E6;
+}
+
+.logo {
+    height: 105px;
+    width: 105px;
+}
+
+.icon {
+    width: 18px;
+    height: 18px;
+}
+
 
