--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Abel|Anton');
 /* Main style sheet for index.html */
-
+htnl, body {
+    background-color: #E6E6E6;
+}
 
 p {
     font-family: 'Abel', sans-serif;
@@ -71,6 +73,14 @@ h5 {
     width: 150px;
     height: 150px;
     border-radius: 75px;
+    border: white 8px solid;
 }
+
+.circle-sm {
+    height: 18px;
+    width: 18px;
+    border-radius: 9px;
+}
+
 
 
