--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,12 @@ h5 {
     height: 150px;
     border-radius: 75px;
     border: white 8px solid;
+    font-size: 24px;
+    color: white;
+    font-family: 'Anton', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+padding-top: 48px;
 }
 
 .circle-sm {
