--- a/css/style.css
+++ b/css/style.css
@@ -123,4 +123,16 @@ h5 {
 }
 
 
+.last-image img {
+    width: 20px;
+    height: 20px;
+}
+
+.
+
+.feature-img img {
+    width: 250px;
+    height: 250px;
+}
+
 
