--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,16 @@ h5 {
     font-size: 18px;
 }
 
+.tweet img {
+    width: 30px;
+    height: 30px;
+}
+
+.tweet  span {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+}
 
 /* Only for small */
 @media (max-width: 576px) {
