--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 html, body {
     background-color: #f0f0f0;
     margin: 0;
-    padding-top: 8px;
+    padding-top: 0;
 }
 
 
@@ -24,9 +24,14 @@ p {
     text-decoration: none;
     text-transform: uppercase;
     color: #000;
+    font-family: 'Abel', sans-serif;
+    font-size: 2.3vw;
+    padding: 0 5px 0 5px;
+
 }
 h1, h2, h3, h4, h5{
     font-family: 'Anton', sans-serif;
+    text-transform: uppercase;
 
 }
 h1 {
@@ -116,9 +121,9 @@ h5 {
 
 .header-container {
     position: absolute;
-    height: 82px;
+    height: 93px;
     background-color: #FFF;
-    border-top: 22px solid #E6E6E6;
+    border-top: 33px solid #E6E6E6;
     width: 100%;
     z-index: 1;
 }
@@ -127,6 +132,13 @@ h5 {
 #header {
     z-index: 1;
     position: relative;
+}
+
+.feature-img {
+    border: #E6E6E6 8px solid;
+}
+.last-img {
+    border: #E6E6E6 3px solid;
 }
 
 
@@ -179,6 +191,9 @@ h5 {
         text-align: center;
         width: 100%;
     }
+    .feature-project {
+        font-size: 20px;
+    }
 
 }
 
@@ -192,7 +207,9 @@ h5 {
         text-align: center;
         width: 100%;
     }
-
+    .feature-project {
+        font-size: 13px;
+    }
 
 }
 
@@ -212,6 +229,12 @@ h5 {
 
     .align-left-md {
         text-align: left;
+    }
+    #header a {
+        font-size: 14px;
+    }
+    .feature-project {
+        font-size: 13px;
     }
 
 
